--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
   flutter_bloc: ^6.1.2
   bloc: ^6.1.1
   rxdart: ^0.25.0
+  http: ^0.12.2
+  equatable: ^1.2.6
+  geolocator: ^6.2.0
+  flutter_spinkit: ^4.1.2+1
+  weather_icons: ^2.0.2
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
@@ -63,17 +69,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Bold
+      fonts:
+        - asset: assets/fonts/NotoSansTC-Bold.otf
+
+    - family: Medium
+      fonts:
+        - asset: assets/fonts/NotoSansTC-Medium.otf
+
+    - family: Regular
+      fonts:
+        - asset: assets/fonts/NotoSansTC-Regular.otf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
