--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   weather_icons: ^2.0.2
   provider: ^4.3.3
+  new_geolocation: ^1.0.0
 
 dev_dependencies:
   flutter_test:
