--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   weather_icons: ^2.0.2
   provider: ^4.3.3
   location: ^3.2.4
+  date_format: ^1.0.9
 
 dev_dependencies:
   flutter_test:
