--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,15 @@ dependencies:
   geolocator: ^6.2.0
   flutter_spinkit: ^4.1.2+1
   weather_icons: ^2.0.2
-  provider: ^4.3.3
   location: ^3.2.4
   date_format: ^1.0.9
   loading: ^1.0.2
   cached_network_image: ^2.5.0
   shimmer: ^1.1.2
   flutter_svg: ^0.19.3
+  bloc_test: ^7.1.0
+  auto_size_text: ^2.1.0
+#  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
