--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
-  flutter_bloc: ^6.1.2
-  bloc: ^6.1.1
+  flutter_bloc: ^7.0.1
   rxdart: ^0.25.0
   http: ^0.12.2
   equatable: ^1.2.6
@@ -42,8 +41,8 @@ dependencies:
   cached_network_image: ^2.5.0
   shimmer: ^1.1.2
   flutter_svg: ^0.19.3
-  bloc_test: ^7.1.0
   auto_size_text: ^2.1.0
+  get_it: ^7.1.3
 #  url_launcher: ^5.7.10
 
 dev_dependencies:
