--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "editor.formatOnSave": true,
-    "editor.fontFamily": "SF Mono Regular",
+    "editor.fontFamily": "Hasklig",
     "editor.fontLigatures": true
 }
