--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,15 @@ dependencies:
   loading: ^1.0.2
   cached_network_image: ^2.5.0
   shimmer: ^1.1.2
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.22.0
   auto_size_text: ^2.1.0
   get_it: ^7.1.3
-#  url_launcher: ^5.7.10
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
